--- a/lib/raffley_web/controllers/rule_html/index.html.heex
+++ b/lib/raffley_web/controllers/rule_html/index.html.heex
@@ -6,7 +6,9 @@
   <ol>
     <%= for rule <- @rules do %>
       <li>
-        <%= rule.text %>
+        <a href={~p"/rules/#{rule.id}"}>
+          <%= rule.text %>
+        </a>
       </li>
     <% end %>
   </ol>
